adding new member dialog sheet and updating string + themes

--- a/app/src/main/res/layout/fragment_member.xml
+++ b/app/src/main/res/layout/fragment_member.xml
@@ -16,4 +16,13 @@
         android:paddingTop="12dp"
         tools:ignore="RtlSymmetry" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/add"
+        android:background="@color/cardview_light_background"
+        android:layout_margin="16dp"/>
+
 </FrameLayout>
