--- a/app/src/main/res/layout/row_members.xml
+++ b/app/src/main/res/layout/row_members.xml
@@ -14,8 +14,8 @@
             android:gravity="center_vertical">
             <ImageView
                 android:id="@+id/memberRank"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_width="40dp"
+                android:layout_height="40dp"/>
             <TextView
                 android:id="@+id/memberName"
                 android:layout_width="wrap_content"
