--- a/app/src/main/res/layout/row_members.xml
+++ b/app/src/main/res/layout/row_members.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/memberName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="?attr/colorOnPrimary"
+                android:textColor="?attr/textAppearanceHeadline4"
                 android:layout_marginLeft="12dp"/>
         </LinearLayout>
         <View
