--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFFFF</color>d
+    <color name="green">#FF5BB450</color>d
 
     <!-- Light theme palette -->
     <color name="md_theme_light_primary">#f3f89e</color>
